refactor: deque로 변경